# django-addons

./: README.md  Taskfile.yaml  pyproject.toml
.github/workflows/: publish.yml
django-keycloak/: .coveragerc  .gitignore  SETUP-README.md  Taskfile.yaml  docker-compose.yml  pyproject.toml  sonar-project.properties
django-keycloak/.github/workflows/: linty.yml
django-keycloak/django_keycloak/: conf.py  middleware.py  models.py  views.py
django-keycloak/django_keycloak/auth/: backends.py
django-keycloak/django_keycloak/migrations/: 0001_initial.py
django-keycloak/django_keycloak/services/: oidc_profile.py
django-keycloak/django_keycloak/templates/django_keycloak/includes/: session_iframe_support.html
django-keycloak/docs/: Makefile
django-keycloak/docs/scenario/: local_user_setup.rst  migrating.rst  multi_tenancy.rst  permissions_by_roles.rst  remote_user_setup.rst
django-keycloak/example/: README.md
django-keycloak/example/keycloak/: Dockerfile
django-keycloak/example/keycloak/export/: example-realm.json  example-users-0.json  master-realm.json  master-users-0.json
django-keycloak/example/nginx/certs/: README.md
django-keycloak/example/resource-provider/: requirements.txt
django-keycloak/example/resource-provider-api/myapp/: views.py
django-keycloak/example/resource-provider/myapp/fixtures/: 0004_client.py
django-keycloak/example/resource-provider/myapp/templates/: 403.html
django-keycloak/example/resource-provider/myapp/templates/myapp/: base.html  home.html  permission.html  secured.html
django-keycloak/keycloak_tests/: conftest.py  settings.py  test_backends.py  test_conf.py  test_middleware.py  test_oidc_profile.py  test_views.py
django-request-id/: pyproject.toml
